home-infra/apps/whoami-app/ingressRoute-secure.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-websecure
  namespace: whoami-app
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whooo.barcini.duckdns.org`)
      kind: Rule
      services:
        - name: whoami-app
          port: 80
  tls: # This route uses TLS
    certResolver: myresolver
