home-infra/apps/whoami-app/ingressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-web
  namespace: whoami-app
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whoo.barcini.duckdns.org`)
      kind: Rule
      services:
        - name: whoami-app
          port: 80
